--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <main class="main">
-    <img class="image" src="./images/illustration-article.svg" >
+    <img class="image" alt="design the blog-card" src="./images/illustration-article.svg" >
     <span>Learning</span>
 
     <p class="published-date">Published 21 Dec 2023</p>
@@ -26,7 +26,7 @@
     <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
 
     <div class="profile-info">
-      <img src="./images/image-avatar.webp">
+      <img src="./images/image-avatar.webp" alt="profile picture">
     <p class="name">Greg Hooper</p>
     </div>
   </main>
